crates/varyk/tests/snapshots/codegen__matching_main_rs.snap
---
source: crates/varyk/tests/codegen.rs
expression: main
---
mod geo;

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
#[derive(Clone, PartialEq)]
enum Status {
    Open,
    Done,
    Named(String),
    Count(i32),
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
#[derive(Clone, PartialEq)]
struct Item {
    title: String,
    status: Status,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
impl Item {
    fn reopen(&mut self) {
        match &self.status {
            Status::Done => {
                self.status = Status::Open;
            }
            _ => {
            }
        }
    }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn describe(status: &Status) -> String {
    match status {
        Status::Open => "open".to_string(),
        Status::Done => "done".to_string(),
        Status::Named(name) => name.clone(),
        Status::Count(n) => {
            let n = *n;
            ::std::format!("{} left", n)
        }
    }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn bump(status: &mut Status) {
    match &*status {
        Status::Count(n) => {
            let n = *n;
            *status = Status::Count(n + 1);
        }
        other => ::std::println!("not a count"),
    }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn area(shape: &crate::geo::Shape) -> f64 {
    match shape {
        crate::geo::Shape::Circle(r) => {
            let r = *r;
            3.0 * r * r
        }
        crate::geo::Shape::Point => 0.0,
    }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn parse(text: &str) -> Result<i32, String> {
    if text == "one" {
        return Ok(1);
    }
    Err("unknown".to_string())
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let mut tasks: Vec<Item> = ::std::vec![Item { title: "write".to_string(), status: Status::Done }];
    Item::reopen(&mut tasks[0usize]);
    match &tasks[0usize].status {
        Status::Open => ::std::println!("open"),
        _ => ::std::println!("not open"),
    }
    let maybe: Option<i32> = Some(3);
    let n = match &maybe {
        Some(k) => {
            let k = *k;
            k
        }
        None => 0,
    };
    match parse("one") {
        Ok(value) => ::std::println!("{}", value),
        Err(message) => ::std::println!("{}", message),
    }
    let picked: Option<Item> = Some(Item { title: "pick".to_string(), status: Status::Named("x".to_string()) });
    let title = match &picked {
        Some(task) => task.title.as_str(),
        None => "none",
    };
    let mut count = Status::Count(2);
    bump(&mut count);
    ::std::println!("{} {} {} {}", describe(&tasks[0usize].status), n, title, describe(&count));
    ::std::println!("{}", area(&crate::geo::Shape::Circle(1.0)));
}
