crates/varyk/tests/snapshots/codegen__methods_example_main_rs.snap
---
source: crates/varyk/tests/codegen.rs
expression: "file(&krate, \"src/main.rs\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
struct Counter {
    count: i32,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
impl Counter {
    fn new() -> Counter {
        Counter { count: 0 }
    }

    fn add(&mut self, by: i32) {
        self.count = self.count + by;
    }

    fn value(&self) -> i32 {
        self.count
    }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let mut counter = Counter::new();
    ::std::println!("{}", Counter::value(&counter));
    Counter::add(&mut counter, 3);
    ::std::println!("{}", Counter::value(&counter));
}
