crates/varyk/tests/snapshots/codegen__methods_main_rs.snap
---
source: crates/varyk/tests/codegen.rs
expression: main
---
mod tally;

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
#[derive(Clone, PartialEq)]
struct Item {
    label: String,
    done: bool,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
#[derive(Clone, PartialEq)]
enum Size {
    Small,
    Large,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
impl Item {
    fn new(label: &str) -> Item {
        Item { label: label.to_string(), done: false }
    }

    fn complete(&mut self) {
        self.done = true;
    }

    fn label(&self) -> String {
        self.label.clone()
    }

    fn is_done(&self) -> bool {
        self.done
    }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
impl Size {
    fn sides(&self) -> usize {
        4usize
    }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn count_done(tasks: &Vec<Item>) -> usize {
    let mut n = 0usize;
    let mut i = 0usize;
    while i < tasks.len() {
        if Item::is_done(&tasks[i]) {
            n = n + 1usize;
        }
        i = i + 1usize;
    }
    n
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn finish_first(tasks: &mut Vec<Item>) {
    Item::complete(&mut tasks[0usize]);
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let mut tasks: Vec<Item> = Vec::new();
    tasks.push(Item::new("write"));
    tasks.push(Item::new("test"));
    finish_first(&mut tasks);
    Item::complete(&mut tasks[1usize]);
    let first = &tasks[0usize];
    ::std::println!("{} done: {}", Item::label(first), Item::is_done(first));
    ::std::println!("{} of {}", count_done(&tasks), tasks.len());
    let mut words: Vec<String> = ::std::vec!["a".to_string(), "b".to_string()];
    words[1usize] = "c".to_string();
    let word = &words[1usize];
    let copy = word.clone();
    let lit = "lit";
    let lit_copy = lit.to_string();
    ::std::println!("{} {} {} {}", word, copy, lit_copy, lit.len());
    let last: Option<String> = words.pop();
    let mut counts: Vec<i32> = ::std::vec![1, 2];
    counts[0usize] = counts[1usize] + 1;
    let size = Size::Large;
    ::std::println!("{} {}", counts[0usize], Size::sides(&size));
    let mut t = crate::tally::Tally::new();
    crate::tally::Tally::add(&mut t, 2);
    ::std::println!("{}", crate::tally::Tally::value(&t));
}
