crates/varyk/tests/snapshots/codegen__modules_main_rs.snap
---
source: crates/varyk/tests/codegen.rs
expression: main
---
mod math;

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    ::std::println!("{}", crate::math::square(7));
}
