crates/varyk/tests/snapshots/codegen__modules_math_rs.snap
---
source: crates/varyk/tests/codegen.rs
expression: "file(&krate, \"src/math.rs\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
pub fn square(x: i32) -> i32 {
    x * x
}
