crates/varyk/tests/snapshots/codegen__non_default_literals_get_a_type_suffix.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"fn main() {\\n    let a: i64 = 10;\\n    let b: u8 = 2;\\n    let c = 3;\\n    let d: f32 = 1.5;\\n    let e = 2.5;\\n    println!(\\\"{} {} {} {} {}\\\", a, b, c, d, e);\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let a = 10i64;
    let b = 2u8;
    let c = 3;
    let d = 1.5f32;
    let e = 2.5;
    ::std::println!("{} {} {} {} {}", a, b, c, d, e);
}
