crates/varyk/tests/snapshots/codegen__owned_local_into_field_return_and_imported_string_parameter.snap
---
source: crates/varyk/tests/codegen.rs
expression: "file(&krate, \"src/main.rs\")"
---
mod ext;

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
#[derive(Clone, PartialEq)]
struct Label {
    text: String,
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn make() -> String {
    let s = "made".to_string();
    s
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn wrap() -> Label {
    let s = "wrapped".to_string();
    Label { text: s }
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let s = "loud".to_string();
    ::std::println!("{}", crate::ext::shout(s));
    ::std::println!("{}", make());
    ::std::println!("{}", wrap().text);
}
