crates/varyk/tests/snapshots/codegen__owned_local_to_a_mut_string_parameter.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"fn clear(mut s: string) {\\n    s = \\\"\\\";\\n}\\n\\nfn main() {\\n    let mut s = \\\"x\\\";\\n    clear(s);\\n    clear(\\\"temp\\\");\\n    println!(\\\"{}\\\", s);\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn clear(s: &mut String) {
    *s = "".to_string();
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let mut s = "x".to_string();
    clear(&mut s);
    clear(&mut "temp".to_string());
    ::std::println!("{}", s);
}
